[tool.poetry]
name = "financial-control"
version = "0.1.0"
description = ""
authors = ["Leonardo Augusto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
decouple = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
